# virtual-serial-port

./: CMakeLists.txt  README.md
source/: SerialPort.cpp  SerialPort.h
tests/: test_SerialPort.cpp
